--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-<!--         <section class="dns-section animate__animated animate__fadeIn">
+        <section class="dns-section animate__animated animate__fadeIn">
             <h2 class="english-text">DNS Configuration</h2>
             <div class="dns-container">
                 <select id="country-select">
@@ -139,11 +139,10 @@
                             </button>
                         </div>
                     </div>
-                    <button id="generate-dns" class="english-text generate-dns">DNS generator</button>
                 </div>
             </div>
         </section>
-    </main> -->
+    </main>
 
     <div class="dns-container">
         <div class="dns-card" id="dns1" onclick="copyToClipboard('10.202.10.10')">
