--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             </button>
                         </div>
                     </div>
-                    <!-- <button id="generate-dns" class="english-text generate-dns">DNS generator</button> -->
+                    <button id="generate-dns" class="english-text generate-dns">DNS generator</button>
                 </div>
             </div>
         </section>
