--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="/index/Frame 3.png" alt="Game 3">
                 <h3 class="english-text">DNS IPV 6 , 4</h3>
                 <p>دی ان اس نسل 4 و 6 اختصاصی کشور های المان ترکیه امارات و رو میتونین با خرین این سرویس دریافت کنین</p>
-                <a href="https://my-website-4du.pages.dev/DNSip/page-ipv4.html/" class="buy-btn english-text" target="_blank">Buy Now</a>
+                <a href="https://my-website-4du.pages.dev/DNSip/page-ipv4.html" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
 
                 <div class="card-container">
