--- a/index/index.html
+++ b/index/index.html
@@ -50,19 +50,19 @@
                 <img src="/index/Frame 1.png" alt="Game 1">
                 <h3 class="english-text">DNS IPV4</h3>
                 <p>دی ان اس نسل 4 اختصاصی کشور های المان ترکیه امارات و هلند رو میتونین با خرین این سرویس دریافت کنین</p>
-                <a href="#" class="buy-btn english-text" target="_blank">Buy Now</a>
+                <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.2s">
                 <img src="/index/Frame 2.png" alt="Game 2">
                 <h3 class="english-text">DNS IPV6</h3>
                 <p>دی ان اس نسل 6 اختصاصی کشور های المان ترکیه امارات رو میتونین با خرین این سرویس دریافت کنین</p>
-                <a href="#" class="buy-btn english-text" target="_blank">Buy Now</a>
+                <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
                 <img src="/index/Frame 3.png" alt="Game 3">
                 <h3 class="english-text">DNS IPV 6 , 4</h3>
                 <p>دی ان اس نسل 4 و 6 اختصاصی کشور های المان ترکیه امارات و رو میتونین با خرین این سرویس دریافت کنین</p>
-<!--                 <a href="https://my-website-4du.pages.dev/DNSip/page-ipv4.html" class="buy-btn english-text" target="_blank">Buy Now</a> -->
+                <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
 
                 <div class="card-container">
