--- a/index/index.html
+++ b/index/index.html
@@ -172,7 +172,8 @@
         <div class="footer-images">
             <a href="https://www.zarinpal.com/"><img src="/index/zarin.png" alt="Zarinpal Logo" width="100px"
                     class="footer-img"></a>
-                    <a referrerpolicy='origin' target='_blank' href='https://trustseal.enamad.ir/?id=569916&Code=J9P2Ms2LWaps6tgInomSkIllcqYY43NW'><img referrerpolicy='origin' src='https://trustseal.enamad.ir/logo.aspx?id=569916&Code=J9P2Ms2LWaps6tgInomSkIllcqYY43NW' alt='' style='cursor:pointer' code='J9P2Ms2LWaps6tgInomSkIllcqYY43NW'></a>
+            <a href="https://www.enamad.ir/"><img src="/index/Enamd.png" alt="E-Namad Logo" width="100px"
+                    class="footer-img"></a>
         </div>
 
         <!-- Telegram Icons -->
