--- a/index/index.html
+++ b/index/index.html
@@ -139,7 +139,7 @@
                             </button>
                         </div>
                     </div>
-                    <!-- <button id="generate-dns" class="english-text generate-dns">DNS generator</button> -->
+                    <button id="generate-dns" class="english-text generate-dns">DNS generator</button>
                 </div>
             </div>
         </section>
@@ -164,18 +164,14 @@
         </div>
     </div>
 
-
+    <a onclick="window.open('https://panel.aqayepardakht.ir/trustGateway/43812',null,'width=400, height=600, scrollbars=no, resizable=no')" href="javascript:void(0)">
+        <img style="border-radius: 0px;margin-right: 10px;" src="https://panel.aqayepardakht.ir/trustlogo/1.svg"></a>
+    <a referrerpolicy='origin' target='_blank' href='https://trustseal.enamad.ir/?id=569916&Code=J9P2Ms2LWaps6tgInomSkIllcqYY43NW'><img referrerpolicy='origin' src='https://trustseal.enamad.ir/logo.aspx?id=569916&Code=J9P2Ms2LWaps6tgInomSkIllcqYY43NW' alt='' style='cursor:pointer' code='J9P2Ms2LWaps6tgInomSkIllcqYY43NW'></a>
     <!-- Footer Section -->
     <!-- Social Media & Images Section -->
     <div class="social-media-section">
         <!-- Footer Images -->
         <div class="footer-images">
-            <a href="https://www.zarinpal.com/"><img src="/index/zarin.png" alt="Zarinpal Logo" width="100px"
-                    class="footer-img"></a>
-            <a href="https://www.enamad.ir/"><img src="/index/Enamd.png" alt="E-Namad Logo" width="100px"
-                    class="footer-img"></a>
-        </div>
-
         <!-- Telegram Icons -->
         <div class="telegram-icons">
             <a href="#" target="_blank" class="telegram-icon whatsapp">
