--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <ul class="footer-links">
                     <li><a href="/index/index.html">Home</a></li>
                     <li><a href="/iP/iP.html">IP Checker</a></li>
-                    <li><a href="/wire/index.html">Wireguard Config</a></li>
+                    <li><a href="https://dnsgolden.shop/wire/">Wireguard Config</a></li>
                 </ul>
                 <div>
                     <a href="#" target="_blank">
