--- a/index/index.html
+++ b/index/index.html
@@ -64,6 +64,13 @@
                 <p>دی ان اس نسل 4 و 6 اختصاصی کشور های المان ترکیه امارات و رو میتونین با خرین این سرویس دریافت کنین</p>
                 <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
+            <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
+                <img src="/index/Frame 4.png" alt="Game 4">
+                <h3 class="english-text">password</h3>
+                <p>با خرید رمز به پنلی نامحدود از سایت دست میابید که میتونین برای خودتون وایرگارد با بهترین پینگ بسازین </p>
+                <a href="https://dnsgolden.shop/wire" class="buy-btn english-text" target="_blank">لینک پنل</a>
+                <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
+            </div>
 
                 <div class="card-container">
             <div class="custom-card">
@@ -197,7 +204,7 @@
                 <ul class="footer-links">
                     <li><a href="/index/index.html">Home</a></li>
                     <li><a href="/iP/iP.html">IP Checker</a></li>
-                    <li><a href="https://dnsgolden.shop/wire/">Wireguard Config</a></li>
+                    <li><a href="/wire/index1.html">Wireguard Config</a></li>
                 </ul>
                 <div>
                     <a href="#" target="_blank">
