--- a/wire/index.html
+++ b/wire/index.html
@@ -6,7 +6,7 @@
     <title>WireGuard Config Generator</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/index/ico.png" type="image/x-icon">
+    <link rel="ico" href="/index/ico.png" type="image/x-icon">
 </head>
 <body>
     <button class="theme-toggle" onclick="toggleTheme()">
