--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="icon" href="/index/ico.png" type="image/x-icon">
+    <link rel="ico" href="/index/ico.png" type="image/x-icon">
 </head>
 
 <body class="dark-mode">
