--- a/DNSip/dns-ipv6.html
+++ b/DNSip/dns-ipv6.html
@@ -356,7 +356,7 @@
                 </select>
             </div>
 
-<!--             <button id="generate-dns">تولید DNS</button> -->
+            <button id="generate-dns">تولید DNS</button>
 
             <div class="dns-cards">
                 <div class="dns-card" onclick="copyToClipboard('ipv6-1')">
