--- a/DNSip/dns-ipv6.html
+++ b/DNSip/dns-ipv6.html
@@ -393,25 +393,25 @@
     <script>
         // DNS data structure
         const dnsData = {
-            // de: {
-            //     ipv4: ["84.128.0.0/10", "93.192.0.0/10", "104.132.3.0/24", "104.132.18.0/24", "104.132.173.0/24"],
-            //     ipv6: ["2003::/19", "2003:1800::/22", "2a11:7400::/32"]
-            // },
-            // usa: {
-            //     ipv4: ["73.72.0.0/14", "73.196.0.0/14", "34.128.0.0/10", "172.253.0.0/16"],
-            //     ipv6: ["2600:1900::/28", "2600:2d00::/28", "2604:31c0::/32"]
-            // },
-            // uk: {
-            //     ipv4: ["89.249.64.0/20", "217.64.112.0/20", "77.243.176.0/20", "89.238.128.0/18"],
-            //     ipv6: ["2a01:300::/29", "2a02:40::/32", "2001:ac8::/32", "2a03:34c0::/32"]
-            // },
-            // taiwan: {
-            //     ipv4: ["66.171.112.0/20", "208.70.200.0/21", "104.132.42.0/24", "104.132.150.0/24"],
-            //     ipv6: ["2401:fa00:3b::/48", "2401:fa00:f0::/48", "2401:fa00:f1::/48"]
-            // },
-            // uae: {
-            //     ipv4: ["118.67.224.0/20", "109.177.0.0/16", "107.165.3.0/24", "92.96.0.0/14", "86.96.0.0/14"],
-            //     ipv6: ["2001:8f8::/29"]
+            de: {
+                ipv4: ["84.128.0.0/10", "93.192.0.0/10", "104.132.3.0/24", "104.132.18.0/24", "104.132.173.0/24"],
+                ipv6: ["2003::/19", "2003:1800::/22", "2a11:7400::/32"]
+            },
+            usa: {
+                ipv4: ["73.72.0.0/14", "73.196.0.0/14", "34.128.0.0/10", "172.253.0.0/16"],
+                ipv6: ["2600:1900::/28", "2600:2d00::/28", "2604:31c0::/32"]
+            },
+            uk: {
+                ipv4: ["89.249.64.0/20", "217.64.112.0/20", "77.243.176.0/20", "89.238.128.0/18"],
+                ipv6: ["2a01:300::/29", "2a02:40::/32", "2001:ac8::/32", "2a03:34c0::/32"]
+            },
+            taiwan: {
+                ipv4: ["66.171.112.0/20", "208.70.200.0/21", "104.132.42.0/24", "104.132.150.0/24"],
+                ipv6: ["2401:fa00:3b::/48", "2401:fa00:f0::/48", "2401:fa00:f1::/48"]
+            },
+            uae: {
+                ipv4: ["118.67.224.0/20", "109.177.0.0/16", "107.165.3.0/24", "92.96.0.0/14", "86.96.0.0/14"],
+                ipv6: ["2001:8f8::/29"]
             }
         };
 
