--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                 <a href="https://dnsgolden.shop/wire" class="buy-btn english-text" target="_blank">لینک پنل</a>
                 <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
+            <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
+                <img src="/index/ico.png" alt="Game 4">
+                <h3 class="english-text">Free DNS</h3>
+                <p>با ورود به این سایت میتونین دی ان اس رایگان خودتونو بسازین  </p>
+                <a href="https://dnsgolden.shop/DNSip/dns-ipv6" class="buy-btn english-text" target="_blank">ورود به سایت نسل 6</a>
+                <a href="https://dnsgolden.shop/DNSip/page-ipv4" class="buy-btn english-text" target="_blank"> ورود به سایت نسل 4</a>
+            </div>
 
                 <div class="card-container">
             <div class="custom-card">
