--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <img src="/index/ico.png" alt="Game 4">
                 <h3 class="english-text">Free DNS</h3>
                 <p>با ورود به این سایت میتونین دی ان اس رایگان خودتونو بسازین  </p>
-                <a href="https://dnsgolden.shop/DNSip/dns-ipv6" class="buy-btn english-text" target="_blank">ورود به سایت نسل 6</a>
-                <a href="https://dnsgolden.shop/DNSip/page-ipv4" class="buy-btn english-text" target="_blank"> ورود به سایت نسل 4</a>
+                <a href="https://dnsgolden.shop/35878313.txt" class="buy-btn english-text" target="_blank">ورود به سایت نسل 6</a>
+                <a href="https://dnsgolden.shop/35878313.txt" class="buy-btn english-text" target="_blank"> ورود به سایت نسل 4</a>
             </div>
 
                 <div class="card-container">
