--- a/index/index.html
+++ b/index/index.html
@@ -72,11 +72,11 @@
                 <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
-                <img src="/index/ico.png" alt="Game 4">
+                <img src="/index/d.png" alt="Game 4">
                 <h3 class="english-text">Free DNS</h3>
                 <p>با ورود به این سایت میتونین دی ان اس رایگان خودتونو بسازین  </p>
-                <a href="https://dnsgolden.shop/DNSip/35878313.txt" class="buy-btn english-text" target="_blank">ورود به سایت نسل 6</a>
-                <a href="https://dnsgolden.shop/DNSip/35878313.txt" class="buy-btn english-text" target="_blank"> ورود به سایت نسل 4</a>
+                <a href="https://dnsgolden.shop/35878313.txt" class="buy-btn english-text" target="_blank">ورود به سایت نسل 6</a>
+                <a href="https://dnsgolden.shop/35878313.txt" class="buy-btn english-text" target="_blank"> ورود به سایت نسل 4</a>
             </div>
 
                 <div class="card-container">
