--- a/index/index.html
+++ b/index/index.html
@@ -79,6 +79,13 @@
                 <a href="https://dnsgolden.shop/35878313.txt" class="buy-btn english-text" target="_blank"> ورود به سایت نسل 4</a>
             </div>
 
+            <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
+                <img src="/index/Frame 4.png" alt="Game 4">
+                <h3 class="english-text">password</h3>
+                <p> با ورود به این صفحه میتونین وارد پنل دی ان اس شوید و برای خود یک دی ان اس اختصاصی بسازید </p>
+                <a href="https://dnsgolden.shop/vip/dd.html" class="buy-btn english-text" target="_blank">لینک پنل</a>
+            </div>
+
                 <div class="card-container">
             <div class="custom-card">
                 <div class="custom-card__icon">
