--- a/index.html
+++ b/index.html
@@ -81,9 +81,15 @@
 
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
                 <img src="/index/Frame 3.png" alt="Game 4">
-                <h3 class="english-text">password</h3>
+                <h3 class="english-text">DNS</h3>
                 <p> با ورود به این صفحه میتونین وارد پنل دی ان اس شوید و برای خود یک دی ان اس اختصاصی بسازید </p>
                 <a href="https://dnsgolden.shop/vip/dd.html" class="buy-btn english-text" target="_blank">لینک پنل</a>
+            </div>
+            <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
+                <img src="/index/d.png" alt="Game 4">
+                <h3 class="english-text">Free</h3>
+                <p> با ورود به این صفحه میتونین از دی ان اس رایگان بهره مند بشید </p>
+                <a href="https://dnsgolden.shop/rayegan/html.html" class="buy-btn english-text" target="_blank">صفحه دی ان اس رایگان</a>
             </div>
 
                 <div class="card-container">
