--- a/rayegan/html.html
+++ b/rayegan/html.html
@@ -169,7 +169,13 @@ font-weight: 500;
 }
 
 </style></head>
-
+<main>
+    <section class="cards">
+        <div class="card animate__animated animate__fadeInUp">
+            <h3 class="english-text">برگشت به صفحه اصلی</h3>
+            <a href="https://dnsgolden.shop" class="buy-btn english-text" target="_blank">برگشت به صفحه اصلی</a>
+        </div>
+    <main>
 <body>
     <div id="app" class="container">
         <div class="card ip-checker-card">
