--- a/rayegan/html.html
+++ b/rayegan/html.html
@@ -212,7 +212,7 @@ font-weight: 500;
             </select>
             <button class="download-btn" onclick="downloadConfig()">
                 <i class="fas fa-download"></i>
-                <span>دانلود کانفیگ</span>
+                <span></span>
             </button>
         </div>
     
