--- a/rayegan/html.html
+++ b/rayegan/html.html
@@ -212,7 +212,7 @@ font-weight: 500;
             </select>
             <button class="download-btn" onclick="downloadConfig()">
                 <i class="fas fa-download"></i>
-                <span></span>
+                <span>دانلود کانفیگ</span>
             </button>
         </div>
     
@@ -635,8 +635,8 @@ font-weight: 500;
         const wireguardConfig = {
             icon: '<img src="wire1.svg" alt="WireGuard">',  // آیکون وایرگارد
             servers: {
-                WGserver1: "https://krakenfiles.com/view/xXnqxrrEpt/file.html",  // لینک دانلود کانفیگ
-                WGserver2: "https://krakenfiles.com/view/h9VPDwAu37/file.html",
+                WGserver1: "",  // لینک دانلود کانفیگ
+                WGserver2: "",
             }
         };
 
