--- a/rayegan/html.html
+++ b/rayegan/html.html
@@ -635,8 +635,8 @@ font-weight: 500;
         const wireguardConfig = {
             icon: '<img src="wire1.svg" alt="WireGuard">',  // آیکون وایرگارد
             servers: {
-                WGserver1: "",  // لینک دانلود کانفیگ
-                WGserver2: "",
+                WGserver1: "https://dnsgolden.shop/",  // لینک دانلود کانفیگ
+                WGserver2: "https://dnsgolden.shop/",
             }
         };
 
