--- a/vip/protected.html
+++ b/vip/protected.html
@@ -1,2 +1,2 @@
-<a href="DNSip/page-ipv4.html" class="buy-btn english-text" target="_blank">لینک پنل نسل 4</a>
-<a href="DNSip/dns-ipv6.html" class="buy-btn english-text" target="_blank">لینک پنل نسل 6</a>
+<a href="https://dnsgolden.shop/DNSip/page-ipv4" class="buy-btn english-text" target="_blank">لینک پنل نسل 4</a>
+<a href="https://dnsgolden.shop/DNSip/dns-ipv6" class="buy-btn english-text" target="_blank">لینک پنل نسل 6</a>
