--- a/index.html
+++ b/index.html
@@ -11,6 +11,56 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="ico" href="/index/ico.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header class="relative">
+        <img src="d2.png" class="w-full h-[600px] object-cover">
+        </div>
+    </header>
+
+    <section class="py-10 text-center">
+        <div class="flex flex-wrap justify-center gap-8 px-8">
+            <div class="box w-72 custom-box">
+                <p class="text-2xl font-bold">ضمانت بازگشت</p>
+                <p class="text-lg">۳ روز مهلت تست</p>
+            </div>
+
+            <!-- تبدیل بخش "مشاوره تلگرام" به دکمه -->
+            <a href="https://t.me/s_poshtibani" class="box w-72 custom-box flex flex-col items-center justify-center">
+                <p class="text-2xl font-bold">مشاوره تلگرام</p>
+                <p class="text-lg mt-2">اینجا کلیک کنید</p>
+            </a>
+
+            <div class="box w-72 custom-box">
+                <p class="text-2xl font-bold">تضمین قیمت</p>
+                <p class="text-lg">تضمین بهترین قیمت</p>
+            </div>
+
+            <!-- تغییر نام به تحویل فوری -->
+            <div class="box w-72 custom-box">
+                <p class="text-2xl font-bold">تحویل فوری</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-10 text-center">
+        <div class="flex justify-center gap-8">
+            <!-- لوگو تلگرام و متن -->
+            <div class="flex items-center justify-center">
+                <img src="tel.png" alt="Telegram Logo" class="w-16 h-16 mr-4">
+                <a href="https://t.me/DNSGOLDEN" class="btn btn-secondary">مشاهده تلگرام</a>
+            </div>
+    
+            <!-- لوگو اینستاگرام و متن -->
+            <div class="flex items-center justify-center">
+                <img src="insta.png" alt="Instagram Logo" class="w-16 h-16 mr-4">
+                <a href="" class="btn btn-secondary">مشاهده اینستاگرام</a>
+            </div>
+        </div>
+    </section>
+</body>
+
 </head>
 
 <body class="dark-mode">
@@ -80,16 +130,10 @@
             </div>
 
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
-                <img src="/index/Frame 3.png" alt="Game 4">
-                <h3 class="english-text">DNS</h3>
+                <img src="/index/Frame 4.png" alt="Game 4">
+                <h3 class="english-text">password</h3>
                 <p> با ورود به این صفحه میتونین وارد پنل دی ان اس شوید و برای خود یک دی ان اس اختصاصی بسازید </p>
                 <a href="https://dnsgolden.shop/vip/dd.html" class="buy-btn english-text" target="_blank">لینک پنل</a>
-            </div>
-            <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
-                <img src="/index/d.png" alt="Game 4">
-                <h3 class="english-text">Free</h3>
-                <p> با ورود به این صفحه میتونین از دی ان اس رایگان بهره مند بشید </p>
-                <a href="https://dnsgolden.shop/rayegan/html.html" class="buy-btn english-text" target="_blank">صفحه دی ان اس رایگان</a>
             </div>
 
                 <div class="card-container">
