--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
 <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="/index/styles.css">
 </head>
 <body class="bg-gradient-to-b from-gray-800 to-blue-800">
 
 <header class="relative">
-    <img src="d2.png" class="w-full h-[500px] object-cover">
+    <img src="/index/d2.png" class="w-full h-[500px] object-cover">
 </header>
 
 <section class="py-10 text-center">
@@ -47,12 +47,12 @@
 <section class="py-10 text-center">
     <div class="flex justify-center gap-8">
         <div class="flex items-center justify-center">
-            <img src="tel.png" alt="Telegram Logo" class="w-16 h-16 mr-4">
+            <img src="/index/tel.png" alt="Telegram Logo" class="w-16 h-16 mr-4">
             <a href="https://t.me/DNSGOLDEN" class="btn btn-secondary">مشاهده تلگرام</a>
         </div>
 
         <div class="flex items-center justify-center">
-            <img src="insta.png" alt="Instagram Logo" class="w-16 h-16 mr-4">
+            <img src="/index/insta.png" alt="Instagram Logo" class="w-16 h-16 mr-4">
             <a href="#" class="btn btn-secondary">مشاهده اینستاگرام</a>
         </div>
     </div>
