--- a/index/index.html
+++ b/index/index.html
@@ -18,7 +18,7 @@
 <body class="bg-gradient-to-b from-gray-800 to-blue-800">
 
 <header class="relative">
-    <img src="https://dnsgolden.shop/index/d2.png" class="w-full h-[500px] object-cover">
+    <img src="=/index/d2.png" class="w-full h-[500px] object-cover">
 </header>
 
 <section class="py-10 text-center">
