--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNSGOLDEN</title>
-    <link rel="stylesheet" href="/index/index.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
         type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="ico" href="/index/ico.png" type="image/x-icon">
+    <link rel="ico" href="ico.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles23.css">
 </head>
-
-<body class="dark-mode">
-    <!-- Loading Screen -->
-    <div class="loading-screen">
-        <div class="loading-box">
-            <div class="inner-box"></div>
-        </div>
-    </div>
+<!-- <body class="bg-gradient-to-b from-gray-800 to-blue-800"> -->
 
     <header>
         <nav>
@@ -28,9 +24,9 @@
             </div>
             </div>
             <div class="nav-links animate__animated animate__fadeIn">
-                <a href="/index/index.html" class="nav-link english-text">Home</a>
-                <a href="#" class="nav-link english-text">Wireguard Config</a>
-                <a href="/iP/iP.html" class="nav-link english-text" id="ip-address">IP checker</a>
+                <a href="index.html" class="nav-link english-text">Home</a>
+                <a href="index1.html" class="nav-link english-text">Wireguard Config</a>
+                <a href="iP.html" class="nav-link english-text" id="ip-address">IP checker</a>
             </div>
             <div class="theme-toggle animate__animated animate__fadeIn">
                 <i class="fas fa-sun"></i>
@@ -43,35 +39,85 @@
         </nav>
     </header>
 
+<header class="relative">
+    <img src="d2.png" class="w-full h-[500px] object-cover ">
+</header>
+
+<section class="py-10 text-center">
+    <div class="flex flex-wrap justify-center gap-8 px-8">
+        <div class="box w-72 custom-box">
+            <p class="text-xl font-bold">ضمانت بازگشت</p>
+            <p class="text-base">۳ روز مهلت تست</p>
+        </div>
+
+        <a href="https://t.me/s_poshtibani" class="box w-72 custom-box flex flex-col items-center justify-center">
+            <p class="text-xl font-bold">مشاوره تلگرام</p>
+            <p class="text-base mt-2">اینجا کلیک کنید</p>
+        </a>
+
+        <div class="box w-72 custom-box">
+            <p class="text-xl font-bold">تضمین قیمت</p>
+            <p class="text-base">تضمین بهترین قیمت</p>
+        </div>
+
+        <div class="box w-72 custom-box">
+            <p class="text-xl font-bold">تحویل فوری</p>
+        </div>
+    </div>
+</section>
+
+<section class="py-10 text-center">
+    <div class="flex justify-center gap-8">
+        <div class="flex items-center justify-center">
+            <img src="tel.png" alt="Telegram Logo" class="w-16 h-16 mr-4">
+            <a href="https://t.me/DNSGOLDEN" class="btn btn-secondary">مشاهده تلگرام</a>
+        </div>
+
+        <div class="flex items-center justify-center">
+            <img src="insta.png" alt="Instagram Logo" class="w-16 h-16 mr-4">
+            <a href="#" class="btn btn-secondary">مشاهده اینستاگرام</a>
+        </div>
+    </div>
+</section>
+
+</body>
+<body class="dark-mode">
+    <!-- Loading Screen -->
+    <div class="loading-screen">
+        <div class="loading-box">
+            <div class="inner-box"></div>
+        </div>
+    </div>
+
     <main>
         <section class="cards">
             <div class="card animate__animated animate__fadeInUp">
-                <img src="/index/Frame 1.png" alt="Game 1">
+                <img src="Frame 1.png" alt="Game 1">
                 <h3 class="english-text">DNS IPV4</h3>
                 <p>دی ان اس نسل 4 اختصاصی کشور های المان ترکیه امارات و هلند رو میتونین با خرین این سرویس دریافت کنین</p>
                 <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.2s">
-                <img src="/index/Frame 2.png" alt="Game 2">
+                <img src="Frame 2.png" alt="Game 2">
                 <h3 class="english-text">DNS IPV6</h3>
                 <p>دی ان اس نسل 6 اختصاصی کشور های المان ترکیه امارات رو میتونین با خرین این سرویس دریافت کنین</p>
                 <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
-                <img src="/index/Frame 3.png" alt="Game 3">
+                <img src="Frame 3.png" alt="Game 3">
                 <h3 class="english-text">DNS IPV 6 , 4</h3>
                 <p>دی ان اس نسل 4 و 6 اختصاصی کشور های المان ترکیه امارات و رو میتونین با خرین این سرویس دریافت کنین</p>
                 <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
-                <img src="/index/Frame 4.png" alt="Game 4">
+                <img src="Frame 4.png" alt="Game 4">
                 <h3 class="english-text">password</h3>
                 <p>با خرید رمز به پنلی نامحدود از سایت دست میابید که میتونین برای خودتون وایرگارد با بهترین پینگ بسازین </p>
                 <a href="https://dnsgolden.shop/wire" class="buy-btn english-text" target="_blank">لینک پنل</a>
                 <a href="https://t.me/s_poshtibani" class="buy-btn english-text" target="_blank">Buy Now</a>
             </div>
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
-                <img src="/index/d.png" alt="Game 4">
+                <img src="d.png" alt="Game 4">
                 <h3 class="english-text">Free DNS</h3>
                 <p>با ورود به این سایت میتونین دی ان اس رایگان خودتونو بسازین  </p>
                 <a href="https://dnsgolden.shop/35878313.txt" class="buy-btn english-text" target="_blank">ورود به سایت نسل 6</a>
@@ -79,13 +125,13 @@
             </div>
 
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
-                <img src="/index/Frame 3.png" alt="Game 4">
+                <img src="Frame 3.png" alt="Game 4">
                 <h3 class="english-text">DNS</h3>
                 <p> با ورود به این صفحه میتونین وارد پنل دی ان اس شوید و برای خود یک دی ان اس اختصاصی بسازید </p>
                 <a href="https://dnsgolden.shop/vip/dd.html" class="buy-btn english-text" target="_blank">لینک پنل</a>
             </div>
             <div class="card animate__animated animate__fadeInUp" style="animation-delay: 0.4s">
-                <img src="/index/d.png" alt="Game 4">
+                <img src="d.png" alt="Game 4">
                 <h3 class="english-text">Free</h3>
                 <p> با ورود به این صفحه میتونین از دی ان اس رایگان بهره مند بشید </p>
                 <a href="https://dnsgolden.shop/rayegan/html.html" class="buy-btn english-text" target="_blank">صفحه دی ان اس رایگان</a>
@@ -93,7 +139,7 @@
                 <div class="card-container">
             <div class="custom-card">
                 <div class="custom-card__icon">
-                    <img src="/index/rocket.png" alt="Icon 1">
+                    <img src="rocket.png" alt="Icon 1">
                 </div>
                 <div class="custom-card__content">
                     <h3 class="custom-card__title">سرعت</h3>
@@ -103,7 +149,7 @@
         
             <div class="custom-card custom-card--blue">
                 <div class="custom-card__icon">
-                    <img src="/index/cyber-security.png" alt="Icon 2">
+                    <img src="cyber-security.png" alt="Icon 2">
                 </div>
                 <div class="custom-card__content">
                     <h3 class="custom-card__title">امنیت</h3>
@@ -113,7 +159,7 @@
         
             <div class="custom-card custom-card--green">
                 <div class="custom-card__icon">
-                    <img src="/index/responsive.png" alt="Icon 3">
+                    <img src="responsive.png" alt="Icon 3">
                 </div>
                 <div class="custom-card__content">
                     <h3 class="custom-card__title">تمامی دیوایس ها</h3>
@@ -199,27 +245,11 @@
             <a referrerpolicy='origin' target='_blank' href='https://trustseal.enamad.ir/?id=569916&Code=J9P2Ms2LWaps6tgInomSkIllcqYY43NW'><img referrerpolicy='origin' src='https://trustseal.enamad.ir/logo.aspx?id=569916&Code=J9P2Ms2LWaps6tgInomSkIllcqYY43NW' alt='' style='cursor:pointer' code='J9P2Ms2LWaps6tgInomSkIllcqYY43NW'></a>
         </div>
 
-        <!-- Telegram Icons -->
-        <div class="telegram-icons">
-            <a href="#" target="_blank" class="telegram-icon whatsapp">
-                <img src="/index/whatsapp.png" alt="WhatsApp">
-            </a>
-            <a href="#" target="_blank" class="telegram-icon instagram">
-                <img src="/index/insta.png" alt="Instagram">
-            </a>
-            <a href="https://t.me/DNSGOLDEN" target="_blank" class="telegram-icon telegram">
-                <img src="/index/tel.png" alt="Telegram">
-            </a>
-            <a href="#" target="_blank" class="telegram-icon yt">
-                <img src="/index/yt.png" alt="YT channel">
-            </a>
-        </div>
-
         <!-- Footer Section -->
         <footer class="footer">
             <div class="footer-content">
                 <ul class="footer-links">
-                    <li><a href="/index/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="/iP/iP.html">IP Checker</a></li>
                     <li><a href="/wire/index1.html">Wireguard Config</a></li>
                 </ul>
@@ -231,7 +261,7 @@
             </div>
         </footer>
 
-        <script src="/index/index.js"></script>
+        <script src="index.js"></script>
 </body>
 
 </html>
