--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DNSGOLDEN</title>
-        <link rel="stylesheet" href="/index/index.css">
-        <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
-            type="text/css" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <link rel="ico" href="/index/ico.png" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/index/styles23.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DNSGOLDEN</title>
+    <link rel="stylesheet" href="/index/index.css">
+    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
+        type="text/css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="ico" href="/index/ico.png" type="image/x-icon">
+</head>
 
-<!-- <body class="bg-gradient-to-b from-gray-800 to-blue-800"> -->
+<body class="dark-mode">
+    <!-- Loading Screen -->
+    <div class="loading-screen">
+        <div class="loading-box">
+            <div class="inner-box"></div>
+        </div>
+    </div>
 
     <header>
         <nav>
@@ -26,7 +30,7 @@
             <div class="nav-links animate__animated animate__fadeIn">
                 <a href="/index/index.html" class="nav-link english-text">Home</a>
                 <a href="/wire/index1.html" class="nav-link english-text">Wireguard Config</a>
-                <a href="/ip/iP.html" class="nav-link english-text" id="ip-address">IP checker</a>
+                <a href="/iP/iP.html" class="nav-link english-text" id="ip-address">IP checker</a>
             </div>
             <div class="theme-toggle animate__animated animate__fadeIn">
                 <i class="fas fa-sun"></i>
@@ -38,56 +42,6 @@
             </div>
         </nav>
     </header>
-
-<header class="relative">
-    <img src="/index/d2.png" class="w-full h-[500px] object-cover ">
-</header>
-
-<section class="py-10 text-center">
-    <div class="flex flex-wrap justify-center gap-8 px-8">
-        <div class="box w-72 custom-box">
-            <p class="text-xl font-bold">ضمانت بازگشت</p>
-            <p class="text-base">۳ روز مهلت تست</p>
-        </div>
-
-        <a href="https://t.me/s_poshtibani" class="box w-72 custom-box flex flex-col items-center justify-center">
-            <p class="text-xl font-bold">مشاوره تلگرام</p>
-            <p class="text-base mt-2">اینجا کلیک کنید</p>
-        </a>
-
-        <div class="box w-72 custom-box">
-            <p class="text-xl font-bold">تضمین قیمت</p>
-            <p class="text-base">تضمین بهترین قیمت</p>
-        </div>
-
-        <div class="box w-72 custom-box">
-            <p class="text-xl font-bold">تحویل فوری</p>
-        </div>
-    </div>
-</section>
-
-<section class="py-10 text-center">
-    <div class="flex justify-center gap-8">
-        <div class="flex items-center justify-center">
-            <img src="/index/tel.png" alt="Telegram Logo" class="w-16 h-16 mr-4">
-            <a href="https://t.me/DNSGOLDEN" class="btn btn-secondary">مشاهده تلگرام</a>
-        </div>
-
-        <div class="flex items-center justify-center">
-            <img src="/index/insta.png" alt="Instagram Logo" class="w-16 h-16 mr-4">
-            <a href="#" class="btn btn-secondary">مشاهده اینستاگرام</a>
-        </div>
-    </div>
-</section>
-
-</body>
-<body class="dark-mode">
-    <!-- Loading Screen -->
-    <div class="loading-screen">
-        <div class="loading-box">
-            <div class="inner-box"></div>
-        </div>
-    </div>
 
     <main>
         <section class="cards">
@@ -241,9 +195,9 @@
     <div class="social-media-section">
         <!-- Footer Images -->
         <div class="footer-images">
-
             <a referrerpolicy='origin' target='_blank' href='https://trustseal.enamad.ir/?id=569916&Code=J9P2Ms2LWaps6tgInomSkIllcqYY43NW'><img referrerpolicy='origin' src='https://trustseal.enamad.ir/logo.aspx?id=569916&Code=J9P2Ms2LWaps6tgInomSkIllcqYY43NW' alt='' style='cursor:pointer' code='J9P2Ms2LWaps6tgInomSkIllcqYY43NW'></a>
         </div>
+
 
         <!-- Footer Section -->
         <footer class="footer">
