--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav>
             <div class="logo animate__animated animate__fadeIn">
                 <i class="fas fa-gamepad"></i> <!-- آیکون دسته بازی -->
-                <span class="english-text">Pubg connection</span>
+                <span class="english-text">game connection</span>
             </div>
             </div>
             <div class="nav-links animate__animated animate__fadeIn">
